build/EduFlowParser.cpp

// Generated from /mnt/c/Users/User/Documents/GitHub/EduFlow/src/EduFlow.g4 by ANTLR 4.13.2


#include "EduFlowVisitor.h"

#include "EduFlowParser.h"


using namespace antlrcpp;
using namespace antlr4;

using namespace antlr4;

namespace {

struct EduFlowParserStaticData final {
  EduFlowParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  EduFlowParserStaticData(const EduFlowParserStaticData&) = delete;
  EduFlowParserStaticData(EduFlowParserStaticData&&) = delete;
  EduFlowParserStaticData& operator=(const EduFlowParserStaticData&) = delete;
  EduFlowParserStaticData& operator=(EduFlowParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag eduflowParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<EduFlowParserStaticData> eduflowParserStaticData = nullptr;

void eduflowParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (eduflowParserStaticData != nullptr) {
    return;
  }
#else
  assert(eduflowParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<EduFlowParserStaticData>(
    std::vector<std::string>{
      "program", "statement", "definition", "execution", "courseDef", "courseCommand", 
      "ruleDef", "workflowDef", "stageDef", "stageCommand", "simulationDef", 
      "studentDef", "studentProperty", "enrollmentDef", "scheduleBlock", 
      "session", "idList", "expression", "term", "value"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "'credits'", "'='", "'capacity'", "'department'", 
      "'level'", "'prerequisites'", "'schedule'", "'eligibility'", "'alternatives'", 
      "';'", "'require'", "'max_credits'", "'allow'", "'courses'", "'enforce'", 
      "'id'", "'major'", "'credits_completed'", "','", "':'", "'-'", "'['", 
      "']'", "'('", "')'", "'define'", "'course'", "'rule'", "'workflow'", 
      "'simulate'", "'stage'", "'set'", "'where'", "'using'", "'for'", "'student'", 
      "'attempt'", "'enroll'", "'in'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "DEFINE", "COURSE", "RULE", 
      "WORKFLOW", "SIMULATE", "STAGE", "SET", "WHERE", "USING", "FOR", "STUDENT", 
      "ATTEMPT", "ENROLL", "IN", "DAY", "LOGICAL_OP", "OPERATOR", "ID", 
      "ATTR_ID", "STRING", "INT", "FLOAT", "TIME", "WS", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  eduflowParserStaticData = std::move(staticData);
}

}

EduFlowParser::EduFlowParser(TokenStream *input) : EduFlowParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

EduFlowParser::EduFlowParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  EduFlowParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *eduflowParserStaticData->atn, eduflowParserStaticData->decisionToDFA, eduflowParserStaticData->sharedContextCache, options);
}

EduFlowParser::~EduFlowParser() {
  delete _interpreter;
}

const atn::ATN& EduFlowParser::getATN() const {
  return *eduflowParserStaticData->atn;
}

std::string EduFlowParser::getGrammarFileName() const {
  return "EduFlow.g4";
}

const std::vector<std::string>& EduFlowParser::getRuleNames() const {
  return eduflowParserStaticData->ruleNames;
}

const dfa::Vocabulary& EduFlowParser::getVocabulary() const {
  return eduflowParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView EduFlowParser::getSerializedATN() const {
  return eduflowParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

EduFlowParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EduFlowParser::ProgramContext::EOF() {
  return getToken(EduFlowParser::EOF, 0);
}

std::vector<EduFlowParser::StatementContext *> EduFlowParser::ProgramContext::statement() {
  return getRuleContexts<EduFlowParser::StatementContext>();
}

EduFlowParser::StatementContext* EduFlowParser::ProgramContext::statement(size_t i) {
  return getRuleContext<EduFlowParser::StatementContext>(i);
}


size_t EduFlowParser::ProgramContext::getRuleIndex() const {
  return EduFlowParser::RuleProgram;
}


std::any EduFlowParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EduFlowVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

EduFlowParser::ProgramContext* EduFlowParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, EduFlowParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(40);
      statement();
      setState(43); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == EduFlowParser::DEFINE

    || _la == EduFlowParser::SIMULATE);
    setState(45);
    match(EduFlowParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

EduFlowParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EduFlowParser::DefinitionContext* EduFlowParser::StatementContext::definition() {
  return getRuleContext<EduFlowParser::DefinitionContext>(0);
}

EduFlowParser::ExecutionContext* EduFlowParser::StatementContext::execution() {
  return getRuleContext<EduFlowParser::ExecutionContext>(0);
}


size_t EduFlowParser::StatementContext::getRuleIndex() const {
  return EduFlowParser::RuleStatement;
}


std::any EduFlowParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EduFlowVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

EduFlowParser::StatementContext* EduFlowParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, EduFlowParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(49);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case EduFlowParser::DEFINE: {
        enterOuterAlt(_localctx, 1);
        setState(47);
        definition();
        break;
      }

      case EduFlowParser::SIMULATE: {
        enterOuterAlt(_localctx, 2);
        setState(48);
        execution();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefinitionContext ------------------------------------------------------------------

EduFlowParser::DefinitionContext::DefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EduFlowParser::CourseDefContext* EduFlowParser::DefinitionContext::courseDef() {
  return getRuleContext<EduFlowParser::CourseDefContext>(0);
}

EduFlowParser::RuleDefContext* EduFlowParser::DefinitionContext::ruleDef() {
  return getRuleContext<EduFlowParser::RuleDefContext>(0);
}

EduFlowParser::WorkflowDefContext* EduFlowParser::DefinitionContext::workflowDef() {
  return getRuleContext<EduFlowParser::WorkflowDefContext>(0);
}


size_t EduFlowParser::DefinitionContext::getRuleIndex() const {
  return EduFlowParser::RuleDefinition;
}


std::any EduFlowParser::DefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EduFlowVisitor*>(visitor))
    return parserVisitor->visitDefinition(this);
  else
    return visitor->visitChildren(this);
}

EduFlowParser::DefinitionContext* EduFlowParser::definition() {
  DefinitionContext *_localctx = _tracker.createInstance<DefinitionContext>(_ctx, getState());
  enterRule(_localctx, 4, EduFlowParser::RuleDefinition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(54);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(51);
      courseDef();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(52);
      ruleDef();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(53);
      workflowDef();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExecutionContext ------------------------------------------------------------------

EduFlowParser::ExecutionContext::ExecutionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

EduFlowParser::SimulationDefContext* EduFlowParser::ExecutionContext::simulationDef() {
  return getRuleContext<EduFlowParser::SimulationDefContext>(0);
}


size_t EduFlowParser::ExecutionContext::getRuleIndex() const {
  return EduFlowParser::RuleExecution;
}


std::any EduFlowParser::ExecutionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EduFlowVisitor*>(visitor))
    return parserVisitor->visitExecution(this);
  else
    return visitor->visitChildren(this);
}

EduFlowParser::ExecutionContext* EduFlowParser::execution() {
  ExecutionContext *_localctx = _tracker.createInstance<ExecutionContext>(_ctx, getState());
  enterRule(_localctx, 6, EduFlowParser::RuleExecution);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    simulationDef();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CourseDefContext ------------------------------------------------------------------

EduFlowParser::CourseDefContext::CourseDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EduFlowParser::CourseDefContext::DEFINE() {
  return getToken(EduFlowParser::DEFINE, 0);
}

tree::TerminalNode* EduFlowParser::CourseDefContext::COURSE() {
  return getToken(EduFlowParser::COURSE, 0);
}

tree::TerminalNode* EduFlowParser::CourseDefContext::ID() {
  return getToken(EduFlowParser::ID, 0);
}

std::vector<EduFlowParser::CourseCommandContext *> EduFlowParser::CourseDefContext::courseCommand() {
  return getRuleContexts<EduFlowParser::CourseCommandContext>();
}

EduFlowParser::CourseCommandContext* EduFlowParser::CourseDefContext::courseCommand(size_t i) {
  return getRuleContext<EduFlowParser::CourseCommandContext>(i);
}


size_t EduFlowParser::CourseDefContext::getRuleIndex() const {
  return EduFlowParser::RuleCourseDef;
}


std::any EduFlowParser::CourseDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EduFlowVisitor*>(visitor))
    return parserVisitor->visitCourseDef(this);
  else
    return visitor->visitChildren(this);
}

EduFlowParser::CourseDefContext* EduFlowParser::courseDef() {
  CourseDefContext *_localctx = _tracker.createInstance<CourseDefContext>(_ctx, getState());
  enterRule(_localctx, 8, EduFlowParser::RuleCourseDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    match(EduFlowParser::DEFINE);
    setState(59);
    match(EduFlowParser::COURSE);
    setState(60);
    match(EduFlowParser::ID);
    setState(61);
    match(EduFlowParser::T__0);
    setState(65);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == EduFlowParser::SET) {
      setState(62);
      courseCommand();
      setState(67);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(68);
    match(EduFlowParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CourseCommandContext ------------------------------------------------------------------

EduFlowParser::CourseCommandContext::CourseCommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EduFlowParser::CourseCommandContext::SET() {
  return getToken(EduFlowParser::SET, 0);
}

tree::TerminalNode* EduFlowParser::CourseCommandContext::INT() {
  return getToken(EduFlowParser::INT, 0);
}

tree::TerminalNode* EduFlowParser::CourseCommandContext::STRING() {
  return getToken(EduFlowParser::STRING, 0);
}

EduFlowParser::ExpressionContext* EduFlowParser::CourseCommandContext::expression() {
  return getRuleContext<EduFlowParser::ExpressionContext>(0);
}

EduFlowParser::ScheduleBlockContext* EduFlowParser::CourseCommandContext::scheduleBlock() {
  return getRuleContext<EduFlowParser::ScheduleBlockContext>(0);
}

tree::TerminalNode* EduFlowParser::CourseCommandContext::ID() {
  return getToken(EduFlowParser::ID, 0);
}

EduFlowParser::IdListContext* EduFlowParser::CourseCommandContext::idList() {
  return getRuleContext<EduFlowParser::IdListContext>(0);
}


size_t EduFlowParser::CourseCommandContext::getRuleIndex() const {
  return EduFlowParser::RuleCourseCommand;
}


std::any EduFlowParser::CourseCommandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EduFlowVisitor*>(visitor))
    return parserVisitor->visitCourseCommand(this);
  else
    return visitor->visitChildren(this);
}

EduFlowParser::CourseCommandContext* EduFlowParser::courseCommand() {
  CourseCommandContext *_localctx = _tracker.createInstance<CourseCommandContext>(_ctx, getState());
  enterRule(_localctx, 10, EduFlowParser::RuleCourseCommand);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    match(EduFlowParser::SET);
    setState(95);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case EduFlowParser::T__2: {
        setState(71);
        match(EduFlowParser::T__2);
        setState(72);
        match(EduFlowParser::T__3);
        setState(73);
        match(EduFlowParser::INT);
        break;
      }

      case EduFlowParser::T__4: {
        setState(74);
        match(EduFlowParser::T__4);
        setState(75);
        match(EduFlowParser::T__3);
        setState(76);
        match(EduFlowParser::INT);
        break;
      }

      case EduFlowParser::T__5: {
        setState(77);
        match(EduFlowParser::T__5);
        setState(78);
        match(EduFlowParser::T__3);
        setState(79);
        match(EduFlowParser::STRING);
        break;
      }

      case EduFlowParser::T__6: {
        setState(80);
        match(EduFlowParser::T__6);
        setState(81);
        match(EduFlowParser::T__3);
        setState(82);
        match(EduFlowParser::INT);
        break;
      }

      case EduFlowParser::T__7: {
        setState(83);
        match(EduFlowParser::T__7);
        setState(84);
        match(EduFlowParser::T__3);
        setState(85);
        expression();
        break;
      }

      case EduFlowParser::T__8: {
        setState(86);
        match(EduFlowParser::T__8);
        setState(87);
        match(EduFlowParser::T__3);
        setState(88);
        scheduleBlock();
        break;
      }

      case EduFlowParser::T__9: {
        setState(89);
        match(EduFlowParser::T__9);
        setState(90);
        match(EduFlowParser::T__3);
        setState(91);
        match(EduFlowParser::ID);
        break;
      }

      case EduFlowParser::T__10: {
        setState(92);
        match(EduFlowParser::T__10);
        setState(93);
        match(EduFlowParser::T__3);
        setState(94);
        idList();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(97);
    match(EduFlowParser::T__11);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RuleDefContext ------------------------------------------------------------------

EduFlowParser::RuleDefContext::RuleDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EduFlowParser::RuleDefContext::DEFINE() {
  return getToken(EduFlowParser::DEFINE, 0);
}

tree::TerminalNode* EduFlowParser::RuleDefContext::RULE() {
  return getToken(EduFlowParser::RULE, 0);
}

tree::TerminalNode* EduFlowParser::RuleDefContext::ID() {
  return getToken(EduFlowParser::ID, 0);
}

EduFlowParser::ExpressionContext* EduFlowParser::RuleDefContext::expression() {
  return getRuleContext<EduFlowParser::ExpressionContext>(0);
}


size_t EduFlowParser::RuleDefContext::getRuleIndex() const {
  return EduFlowParser::RuleRuleDef;
}


std::any EduFlowParser::RuleDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EduFlowVisitor*>(visitor))
    return parserVisitor->visitRuleDef(this);
  else
    return visitor->visitChildren(this);
}

EduFlowParser::RuleDefContext* EduFlowParser::ruleDef() {
  RuleDefContext *_localctx = _tracker.createInstance<RuleDefContext>(_ctx, getState());
  enterRule(_localctx, 12, EduFlowParser::RuleRuleDef);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(EduFlowParser::DEFINE);
    setState(100);
    match(EduFlowParser::RULE);
    setState(101);
    match(EduFlowParser::ID);
    setState(102);
    match(EduFlowParser::T__0);
    setState(103);
    match(EduFlowParser::T__12);
    setState(104);
    expression();
    setState(105);
    match(EduFlowParser::T__11);
    setState(106);
    match(EduFlowParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WorkflowDefContext ------------------------------------------------------------------

EduFlowParser::WorkflowDefContext::WorkflowDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EduFlowParser::WorkflowDefContext::DEFINE() {
  return getToken(EduFlowParser::DEFINE, 0);
}

tree::TerminalNode* EduFlowParser::WorkflowDefContext::WORKFLOW() {
  return getToken(EduFlowParser::WORKFLOW, 0);
}

tree::TerminalNode* EduFlowParser::WorkflowDefContext::ID() {
  return getToken(EduFlowParser::ID, 0);
}

std::vector<EduFlowParser::StageDefContext *> EduFlowParser::WorkflowDefContext::stageDef() {
  return getRuleContexts<EduFlowParser::StageDefContext>();
}

EduFlowParser::StageDefContext* EduFlowParser::WorkflowDefContext::stageDef(size_t i) {
  return getRuleContext<EduFlowParser::StageDefContext>(i);
}


size_t EduFlowParser::WorkflowDefContext::getRuleIndex() const {
  return EduFlowParser::RuleWorkflowDef;
}


std::any EduFlowParser::WorkflowDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EduFlowVisitor*>(visitor))
    return parserVisitor->visitWorkflowDef(this);
  else
    return visitor->visitChildren(this);
}

EduFlowParser::WorkflowDefContext* EduFlowParser::workflowDef() {
  WorkflowDefContext *_localctx = _tracker.createInstance<WorkflowDefContext>(_ctx, getState());
  enterRule(_localctx, 14, EduFlowParser::RuleWorkflowDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    match(EduFlowParser::DEFINE);
    setState(109);
    match(EduFlowParser::WORKFLOW);
    setState(110);
    match(EduFlowParser::ID);
    setState(111);
    match(EduFlowParser::T__0);
    setState(113); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(112);
      stageDef();
      setState(115); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == EduFlowParser::STAGE);
    setState(117);
    match(EduFlowParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StageDefContext ------------------------------------------------------------------

EduFlowParser::StageDefContext::StageDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EduFlowParser::StageDefContext::STAGE() {
  return getToken(EduFlowParser::STAGE, 0);
}

tree::TerminalNode* EduFlowParser::StageDefContext::STRING() {
  return getToken(EduFlowParser::STRING, 0);
}

std::vector<EduFlowParser::StageCommandContext *> EduFlowParser::StageDefContext::stageCommand() {
  return getRuleContexts<EduFlowParser::StageCommandContext>();
}

EduFlowParser::StageCommandContext* EduFlowParser::StageDefContext::stageCommand(size_t i) {
  return getRuleContext<EduFlowParser::StageCommandContext>(i);
}


size_t EduFlowParser::StageDefContext::getRuleIndex() const {
  return EduFlowParser::RuleStageDef;
}


std::any EduFlowParser::StageDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EduFlowVisitor*>(visitor))
    return parserVisitor->visitStageDef(this);
  else
    return visitor->visitChildren(this);
}

EduFlowParser::StageDefContext* EduFlowParser::stageDef() {
  StageDefContext *_localctx = _tracker.createInstance<StageDefContext>(_ctx, getState());
  enterRule(_localctx, 16, EduFlowParser::RuleStageDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    match(EduFlowParser::STAGE);
    setState(120);
    match(EduFlowParser::STRING);
    setState(121);
    match(EduFlowParser::T__0);
    setState(125);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == EduFlowParser::SET) {
      setState(122);
      stageCommand();
      setState(127);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(128);
    match(EduFlowParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StageCommandContext ------------------------------------------------------------------

EduFlowParser::StageCommandContext::StageCommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EduFlowParser::StageCommandContext::SET() {
  return getToken(EduFlowParser::SET, 0);
}

tree::TerminalNode* EduFlowParser::StageCommandContext::INT() {
  return getToken(EduFlowParser::INT, 0);
}

tree::TerminalNode* EduFlowParser::StageCommandContext::WHERE() {
  return getToken(EduFlowParser::WHERE, 0);
}

EduFlowParser::ExpressionContext* EduFlowParser::StageCommandContext::expression() {
  return getRuleContext<EduFlowParser::ExpressionContext>(0);
}

EduFlowParser::IdListContext* EduFlowParser::StageCommandContext::idList() {
  return getRuleContext<EduFlowParser::IdListContext>(0);
}


size_t EduFlowParser::StageCommandContext::getRuleIndex() const {
  return EduFlowParser::RuleStageCommand;
}


std::any EduFlowParser::StageCommandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EduFlowVisitor*>(visitor))
    return parserVisitor->visitStageCommand(this);
  else
    return visitor->visitChildren(this);
}

EduFlowParser::StageCommandContext* EduFlowParser::stageCommand() {
  StageCommandContext *_localctx = _tracker.createInstance<StageCommandContext>(_ctx, getState());
  enterRule(_localctx, 18, EduFlowParser::RuleStageCommand);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    match(EduFlowParser::SET);
    setState(142);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case EduFlowParser::T__13: {
        setState(131);
        match(EduFlowParser::T__13);
        setState(132);
        match(EduFlowParser::T__3);
        setState(133);
        match(EduFlowParser::INT);
        break;
      }

      case EduFlowParser::T__14: {
        setState(134);
        match(EduFlowParser::T__14);
        setState(135);
        match(EduFlowParser::T__3);
        setState(136);
        match(EduFlowParser::T__15);
        setState(137);
        match(EduFlowParser::WHERE);
        setState(138);
        expression();
        break;
      }

      case EduFlowParser::T__16: {
        setState(139);
        match(EduFlowParser::T__16);
        setState(140);
        match(EduFlowParser::T__3);
        setState(141);
        idList();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(144);
    match(EduFlowParser::T__11);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SimulationDefContext ------------------------------------------------------------------

EduFlowParser::SimulationDefContext::SimulationDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* EduFlowParser::SimulationDefContext::SIMULATE() {
  return getToken(EduFlowParser::SIMULATE, 0);
}

tree::TerminalNode* EduFlowParser::SimulationDefContext::STRING() {
  return getToken(EduFlowParser::STRING, 0);
}

tree::TerminalNode* EduFlowParser::SimulationDefContext::USING() {
  return getToken(EduFlowParser::USING, 0);
}

tree::TerminalNode* EduFlowParser::SimulationDefContext::ID() {
  return getToken(EduFlowParser::ID, 0);
}

EduFlowParser::StudentDefContext* EduFlowParser::SimulationDefContext::studentDef() {
  return getRuleContext<EduFlowParser::StudentDefContext>(0);
}

EduFlowParser::EnrollmentDefContext* EduFlowParser::SimulationDefContext::enrollmentDef() {
  return getRuleContext<EduFlowParser::EnrollmentDefContext>(0);
}


size_t EduFlowParser::SimulationDefContext::getRuleIndex() const {
  return EduFlowParser::RuleSimulationDef;
}


std::any EduFlowParser::SimulationDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<EduFlowVisitor*>(visitor))
    return parserVisitor->visitSimulationDef(this);
  else
    return visitor->visitChildren(this);
}

EduFlowParser::SimulationDefContext* EduFlowParser::simulationDef() {
  SimulationDefContext *_localctx = _tracker.createInstance<SimulationDefContext>(_ctx, getState());
  enterRule(_localctx, 20, EduFlowParser::RuleSimulationDef);
